# Building3D

./: .gitignore  README.md  auckland-maps-polygon-report.md  oggb-business-building-3d-research.md  package-lock.json  package.json  pyproject.toml
building3d/: __init__.py  __main__.py  artifacts.py  batch.py  catalog.py  cli.py  config.py  discovery.py  export_package.py  geometry.py  gltf.py  groups.py  manifest.py  mapsindoors.py  normalize.py  projection.py  unimate.py  validate.py
building3d/blender/: build_model.py  materials.py
configs/: auckland.yaml  auckland_building_groups.yaml  oggb.yaml
docs/: auckland-building-catalog.md  godot-tooling-installation-report.md  science-baked-test-pipeline.md  science-door-research.md  science-scene-import-verification.md  unimate-room-node-and-building-grouping-report.md
legacy/walkable_nav_mesh/: README.md  groups_walkable_nav_mesh_legacy.py
tests/: test_artifacts.py  test_batch.py  test_catalog.py  test_cli_pipeline.py  test_derive_science_door_points.py  test_discovery.py  test_geometry.py  test_gltf.py  test_group_config.py  test_groups.py  test_manifest.py  test_normalize.py  test_projection.py  test_unimate.py  test_validate.py
tools/: derive_science_door_points.py  export_door_point_debug_glb.py  gltf_validate.mjs  inspect_godot_navigation_methods.gd  probe_godot_hull_nav.gd  probe_godot_imported_science_route_nav.gd  probe_godot_min_nav.gd  probe_godot_science_nav.gd  render_glb_preview.py  verify_godot_science_import.gd
